--- a/manifests/dev/demo-gigya/kustomization.yaml
+++ b/manifests/dev/demo-gigya/kustomization.yaml
@@ -5,10 +5,10 @@ kind: Kustomization
 resources:
 - ../base
 
-nameSuffix: -demo 
+nameSuffix: -demo-gigya
 
 commonLabels:
-  appId: demo
+  appId: demo-gigya
 
 patchesStrategicMerge:
 - container.yaml
