--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -6,7 +6,6 @@ on:
       - master
       - develop
       - 'release/**'
-      - 'bohdan/infrastructure'
 
 jobs:
   deploy:
@@ -52,7 +51,7 @@ jobs:
       run: sudo apt-get install libxml2-utils
 
     - name: Deploy DEV
-      if: github.ref == 'refs/heads/bohdan/infrastructure'
+      if: github.ref == 'refs/heads/develop'
       run: bash scripts/deploy/not-prod.sh dev
 
     - name: Deploy STAGING
