--- a/manifests_webapp/dev/replica-and-rollout-strategy.yaml
+++ b/manifests_webapp/dev/replica-and-rollout-strategy.yaml
@@ -1,10 +1,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: single-server
+  name: server-webapp
 spec:
   revisionHistoryLimit: 1
-  replicas: 2
+  replicas: 1
   strategy:
     rollingUpdate:
       maxSurge: 1
