--- a/manifests/staging/base/container.yaml
+++ b/manifests/staging/base/container.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: server-gigya
+  name: single-server
 spec:
   template:
     spec:
@@ -10,8 +10,6 @@ spec:
           env:
             - name: OWNID__WEB_APP_URL
               value: https://sign.staging.ownid.com
-            - name: OWNID__ADD_CORS_ORIGINS
-              value: https://demo-screens.staging.ownid.com
             - name: ASPNETCORE_ENVIRONMENT
               value: staging
             - name: SMTP__HOST
