--- a/manifests/staging/dor/container.yaml
+++ b/manifests/staging/dor/container.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: server-gigya
+  name: single-server
 spec:
   template:
     spec:
@@ -23,7 +23,7 @@ spec:
             - name: OWNID__MAGIC_LINK__ENABLED
               value: 'true'
             - name: OWNID__MAGIC_LINK__REDIRECT_URL
-              value: https://demo.staging.ownid.com/login
+              value: https://gigya.single.demo.staging.ownid.com/login
             - name: SERVER_MODE
               value: pilot
             - name: GIGYA__DATA_CENTER
