--- a/manifests_webapp/staging/replica-and-rollout-strategy.yaml
+++ b/manifests_webapp/staging/replica-and-rollout-strategy.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: single-server
+  name: server-webapp
 spec:
   revisionHistoryLimit: 1
   replicas: 2
