--- a/manifests/dev/demo-firebase/container.yaml
+++ b/manifests/dev/demo-firebase/container.yaml
@@ -13,9 +13,9 @@ spec:
             - name: OWNID__DID
               value: did:ownid:demo_firebase_dev_151850889514
             - name: OWNID__NAME
-              value: Noted (OwnID Demo)
+              value: Firebase Noted (OwnID Demo)
             - name: OWNID__DESCRIPTION
-              value: Noted (OwnID Demo)
+              value: Firebase Noted (OwnID Demo)
             - name: OWNID__FIDO2_PASSWORDLESS_PAGE_URL
               value: https://passwordless.firebase.single.demo.dev.ownid.com
             - name: OWNID__TOP_DOMAIN
