fixed config naming (#216)

--- a/OwnID.Server/appsettings.Development.json
+++ b/OwnID.Server/appsettings.Development.json
@@ -20,7 +20,7 @@
   },
   "server_mode" : "local",
   "firebase": {
-    "credential_json": ""
+    "credentials_json": ""
   },
   "gigya": {
     "secret": "{secret}",
