add service account

--- a/manifests/base/deployment.yaml
+++ b/manifests/base/deployment.yaml
@@ -7,6 +7,7 @@ spec:
     spec:
       imagePullSecrets:
         - name: regcred
+      serviceAccountName: ownid-single-serviceaccount
       containers:
         - name: single-server
           image: single-server:latest
