--- a/OwnID.Server/appsettings.Development.json
+++ b/OwnID.Server/appsettings.Development.json
@@ -22,6 +22,10 @@
   "firebase": {
     "credentials_json": ""
   },
+  "ias": {
+    "public_key": "",
+    "private_key": ""
+  },
   "gigya": {
     "secret": "{secret}",
     "api_key": "{api-key}",
